--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="header">
+  <h1>Wolf app</h1>
+  <h4 class="logout" routerLink="/login" routerLinkActive="disabled">Logout</h4>
+</div>
+<div class="app-content">
+  <router-outlet></router-outlet>
+</div>
